feat: implement ListarAventureirosController for paginated Aventureiro retrieval